--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /S4 Restore/~~ inital attempt at dbo.load_backup_files.sql
 /S4 Restore/~~ extract FILE HEADERONLY info from backups - initial testing and dev.sql
 /S4 Restore/~~ restore_databases - resiliency version (in progress).sql
+/Deployment/__build/build.log.txt
