S4-31: MVP of Auto Log Shrink Completed
Still a number of changes, tweaks, and optimizations to make (as well as I need to figure out and implement a 'reporting' process for the output... but, debugging is all done and the process works (with the execption of a couple of edge cases).

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /Common/Types/__UDTT Notes.txt
 /Common/Types/enumeration.sql
 /Common/Types/extraction_mapping.sql
+/Deployment/__build/__sample build command.txt
