gitignore cleanup + DISASTER RECOVERY NOTES
So. not sure how, where but... Git Tower lost its mind. Couldn't/wouldn't let me finish git-flow feature and ... even though I WAS able to merge feature/7.3 into my local/working-copy... Tower would NOT see any of those changes.
So... I:
- dumped patch info.
- did a poor man's / CYA backup fo all 7.3 content...
- uninstalled/re-installed git tower
- dropped/recreated repo - 're-pulling' from origin (i.e., dropped all current 7.3 changes)
- manually-ish went back in and re-built-ish commits from previous attempt at 7.3.

Friggin mess.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ __Misc Ideas*
 /S4 Monitoring/__fodder and notes/rough_notes_on_perf_baseline_captures_and_functionality.sql
 /S4 Extended Event Sessions/Extraction/extract_blockedprocesses_trace.sql
 /S4 Extended Event Sessions/Extraction/extract_deadlock_trace.sql
+/S4 PowerShell*
